--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-attrs==18.1.0
-certifi==2018.4.16
 click==6.7
-cycler==0.9.0
-ez-setup==0.9
 Flask==1.0.2
 Flask-Cors==3.0.6
-gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-matplotlib==1.5.1
-more-itertools==4.2.0
-numpy==1.11.0
-Pillow==3.1.2
-pipenv==2018.7.1
-pluggy==0.6.0
-py==1.5.4
-pycurl==7.43.0
-pyparsing==2.0.3
-pytest==3.6.2
-python-dateutil==2.4.2
-pytz==2014.10
-six==1.10.0
-virtualenv==16.0.0
-virtualenv-clone==0.3.0
+pkg-resources==0.0.0
+six==1.11.0
 Werkzeug==0.14.1
